--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,17 @@
-* {
-    font-weight: 900;
+body {
+    display:flex;
+    justify-content: center;
+}
+
+.container {
+    text-align: center;
+    /* border: 4px red solid; */
+    height:  500px;
+    width:500px;
+}
+
+button {
+    height: 30px;
+    /* width: 60px; */
+    margin: 10px;
 }
