--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,17 @@
-body {
-    display:flex;
-    justify-content: center;
-}
+
 
 .container {
-    text-align: center;
-    /* border: 4px red solid; */
-    height:  500px;
-    width:500px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 10vh;
+    text-align: center; /*needed*/
+    width: 100vw;
+    height: 100vh;
 }
 
 button {
-    height: 30px;
-    /* width: 60px; */
+    height: 40px;
+    width: 70px;
     margin: 10px;
+    border-radius: 8px;
 }
